fix admin ewallet

--- a/app/assets/stylesheets/marketing_dashboard/e_wallets.scss
+++ b/app/assets/stylesheets/marketing_dashboard/e_wallets.scss
@@ -1,12 +1,3 @@
-.put-open-panel {
-  width: 900px;
-  margin: 60px auto 0;
-}
-
-.put-open-panel .panel-body {
-  padding-top: 30px;
-}
-
 .mnemonic-modal-text {
   padding: 30px 0;
   text-align: center;
@@ -15,4 +6,13 @@
 .pmestoken-modal-text {
   padding: 30px 0;
   word-break: break-all;
+}
+
+.wallet-detail-publickey {
+  margin-bottom: 10px;
+  word-break: break-all;
+}
+
+.mr-10 {
+  margin-right: 10px;
 }
