--- a/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
@@ -1,8 +1,13 @@
+<%= javascript_include_tag 'https://cdn.robin8.net/pmes.min.js', 'data-turbolinks-track' => true %>
+
 <%= hidden_field_tag 'current_admin_user_id', @current_admin_user.id %>
 <%= hidden_field_tag 'host_url', Rails.application.secrets.domain %>
 
 <div id="put_remit_container">
-  <h3>PUT活动奖励列表</h3>
+  <h3>
+    PUT活动奖励列表
+    <button type="button" class="btn btn-primary pull-right" id="put_create_btn">创建钱包</button>
+  </h3>
   <hr>
   <table class="table table-striped">
     <thead>
@@ -25,9 +30,91 @@
           <td><%= campaign.e_wallet_transtions.pending.sum(:amount) %></td>
           <td>
             <%= link_to "详情", marketing_dashboard_e_wallets_campaign_transactions_path(campaign) %>
+            <%= link_to "打款", '', method: :put if campaign.e_wallet_transtions.pending.present? %>
           </td>
         </tr>
       <% end %>
     </tbody>
   </table>
+</div>
+
+<div class="modal fade" id="put_create_modal" tabindex="-1" role="dialog" aria-labelledby="put_create_modal_label">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="put_create_modal_label">创建PUT钱包</h4>
+      </div>
+      <div class="modal-body">
+        <div class="put-open-panel">
+          <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" minlength="6" maxlength="6" placeholder="Please enter your password (6 digits only)" />
+          </div>
+          <div class="form-group">
+            <label for="password_confirm">Confirm password:</label>
+            <input type="password" class="form-control" id="password_confirm" minlength="6" maxlength="6" placeholder="Please confirm your password (6 digits only)" />
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" id="pmes_reg_submit_btn">Confirm</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="mnemonic_modal" tabindex="-1" role="dialog" aria-labelledby="mnemonic_modal_label">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="mnemonic_modal_label">请截图保存或纸笔记录此安全码，用于找回账户</h4>
+      </div>
+      <div class="modal-body">
+        <div class="mnemonic-modal-text" id="mnemonic_modal_text"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="mnemonic_text_get">已记下</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="mnemonic_input_modal" tabindex="-1" role="dialog" aria-labelledby="mnemonic_input_modal_label">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="mnemonic_input_modal_label">请输入您的安全码</h4>
+      </div>
+      <div class="modal-body">
+        <textarea class="form-control" rows="4" id="mnemonic_input"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">重新获取</button>
+        <button type="button" class="btn btn-primary" id="mnemonic_confirm">确定</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="pmestoken_modal" tabindex="-1" role="dialog" aria-labelledby="pmestoken_modal_label">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="pmestoken_modal_label">请截图保存或纸笔记录此安全码，用于找回账户</h4>
+      </div>
+      <div class="modal-body">
+        <div class="pmestoken-modal-text" id="pmestoken_modal_text"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="pmestoken_text_get">已记下</button>
+      </div>
+    </div>
+  </div>
 </div>
