--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -2,5 +2,6 @@
 @import 'mobile/mixins/variables';
 @import 'mobile/mixins/mixins';
 @import 'mobile/default';
+@import 'mobile/invite';
 @import 'mobile/blockchain_intro';
 @import 'mobile/blockchain_pmes';
