--- a/app/views/marketing_dashboard/users/index.csv.erb
+++ b/app/views/marketing_dashboard/users/index.csv.erb
@@ -1,6 +1,7 @@
 <%
   # 文档标题
   cols = [
+    'Id',
     'Name',
     'Mobile number',
     'Available amount',
@@ -15,6 +16,7 @@
     csv << cols
     @users.each do |user|
       csv << [
+        user.id,
         user.smart_name,
         user.mobile_number,
         user.avail_amount,
