admin e wallet add kol list

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -448,6 +448,9 @@
               <%= link_to 'KOL策略管理', marketing_dashboard_e_wallets_kol_promotions_path %>
             </li>
             <li>
+              <%= link_to 'PUT钱包列表', marketing_dashboard_e_wallets_kols_path %>
+            </li>
+            <li>
               <%= link_to 'PUT币活动奖励列表', marketing_dashboard_e_wallets_campaigns_path %>
             </li>
             <li>
