--- a/app/views/marketing_dashboard/announcements/_form.html.erb
+++ b/app/views/marketing_dashboard/announcements/_form.html.erb
@@ -34,6 +34,12 @@
     </div>
   </div>
   <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">分类</label>
+    <div class="col-sm-10">
+      <%= f.select :detail_type, options_for_select(Announcement::DetailTypes, @announcement.detail_type), :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit '提交', :class => 'btn btn-primary' %>
     </div>
