--- a/app/views/marketing_dashboard/withdraws/index.html.erb
+++ b/app/views/marketing_dashboard/withdraws/index.html.erb
@@ -162,6 +162,7 @@
       <th>平均点击</th>
       <th>最高点击</th>
       <th>拒绝理由</th>
+      <th>拒绝理由是否已读</th>
       <th>操作</th>
     </tr>
   </thead>
@@ -210,6 +211,7 @@
         <td> <%= w.kol.average_click_of_campaigns rescue "" %></td>
         <td> <%= w.kol.maximum_click_of_campaigns rescue "" %></td>
         <td><%= w.reject_reason %></td>
+        <td><%= w.is_read ? '已读' :  '未读' %></td>
         <td>
           <% if w.status == 'pending' %>
             <%= link_to '通过', marketing_dashboard_withdraw_check_path(w.id), method: :post %> /
