--- a/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
@@ -65,11 +65,12 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="wallet_detail_modal_label">钱包详情</h4>
       </div>
-      <div class="modal-body" id="wallet_detail_container">
+      <div class="modal-body">
         <div class="wallet-detail-publickey">
           <p><strong>public_key:</strong></p>
           <p id="wallet_detail_publickey"></p>
         </div>
+        <div id="wallet_detail_container"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
