--- a/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
@@ -1,13 +1,26 @@
 <%= javascript_include_tag 'https://cdn.robin8.net/pmes.min.js', 'data-turbolinks-track' => true %>
-
 <%= hidden_field_tag 'campaign_id', @campaign.id %>
 
 <h3>
   PUT活动奖励列表
-  <button type="button" class="btn btn-primary pull-right" id="put_remit_btn">批量付款</button>
-  <button type="button" class="btn btn-info pull-right mr-10" id="wallet_detail_btn">钱包详情</button>
+  <% unless params[:status] == 'successful' %>
+    <button type="button" class="btn btn-primary pull-right ml-10" id="put_remit_btn">批量付款</button>
+  <% end %>
+  <button type="button" class="btn btn-info pull-right" id="wallet_detail_btn">钱包详情</button>
 </h3>
 <hr>
+
+<ul class="nav nav-tabs" role="tablist">
+  <li role="presentation" class="<%= params[:status] == 'pending' ? 'active' : '' %>">
+    <%= link_to '待支付', marketing_dashboard_e_wallets_campaign_transactions_path(status: 'pending') %>
+  </li>
+  <li role="presentation" class="<%= params[:status] == 'failed' ? 'active' : '' %>">
+    <%= link_to '支付失败', marketing_dashboard_e_wallets_campaign_transactions_path(status: 'failed') %>
+  </li>
+  <li role="presentation" class="<%= params[:status] == 'successful' ? 'active' : '' %>">
+    <%= link_to '支付成功', marketing_dashboard_e_wallets_campaign_transactions_path(status: 'successful') %>
+  </li>
+</ul>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -33,30 +46,32 @@
   </tbody>
 </table>
 
-<div class="modal fade" id="token_input_modal" tabindex="-1" role="dialog" aria-labelledby="token_input_modal_label">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="token_input_modal_label">请输入您的Token和密码</h4>
-      </div>
-      <div class="modal-body">
-        <div class="form-group">
-          <label for="password_input">Password:</label>
-          <input type="password" minlength="6" maxlength="6" class="form-control" id="password_input" placeholder="Password">
+<% unless params[:status] == 'successful' %>
+  <div class="modal fade" id="token_input_modal" tabindex="-1" role="dialog" aria-labelledby="token_input_modal_label">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="token_input_modal_label">请输入您的Token和密码</h4>
         </div>
-        <div class="form-group">
-          <label for="token_input">Token:</label>
-          <textarea class="form-control" rows="6" id="token_input" placeholder="Token"></textarea>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="password_input">Password:</label>
+            <input type="password" minlength="6" maxlength="6" class="form-control" id="password_input" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <label for="token_input">Token:</label>
+            <textarea class="form-control" rows="6" id="token_input" placeholder="Token"></textarea>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary" id="token_confirm">确定</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+          <button type="button" class="btn btn-primary" id="token_confirm">确定</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
 
 <div class="modal fade" id="wallet_detail_modal" tabindex="-1" role="dialog" aria-labelledby="wallet_detail_modal_label">
   <div class="modal-dialog" role="document">
