--- a/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
@@ -17,7 +17,10 @@
         <th>奖励总额</th>
         <th>未支付人数</th>
         <th>未支付总额</th>
-        <th>操作</th>
+        <th>支付成功人数</th>
+        <th>支付成功总额</th>
+        <th>支付失败人数</th>
+        <th>支付失败总额</th>
       </tr>
     </thead>
     <tbody>
@@ -26,11 +29,14 @@
           <td><%= campaign.name %></td>
           <td><%= campaign.kols.count %></td>
           <td><%= campaign.e_wallet_transtions.sum(:amount) %></td>
-          <td><%= campaign.e_wallet_transtions.pending.count %></td>
-          <td><%= campaign.e_wallet_transtions.pending.sum(:amount) %></td>
-          <td>
-            <%= link_to "详情", marketing_dashboard_e_wallets_campaign_transactions_path(campaign) %>
-          </td>
+          <% EWallet::Transtion::STATUS.each do |status| %>
+            <td>
+              <%= link_to campaign.e_wallet_transtions.send(status).count, marketing_dashboard_e_wallets_campaign_transactions_path(campaign, status: status) %>
+            </td>
+            <td>
+              <%= link_to campaign.e_wallet_transtions.send(status).sum(:amount), marketing_dashboard_e_wallets_campaign_transactions_path(campaign, status: status) %>
+            </td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
