--- a/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
@@ -12,21 +12,23 @@
   <table class="table table-striped">
     <thead>
       <tr>
+        <th>活动ID</th>
         <th>活动名称</th>
         <th>参与人数</th>
-        <th>奖励总额</th>
+        <th>奖励put数量</th>
         <th>未支付人数</th>
-        <th>未支付总额</th>
+        <th>未支付put数量</th>
         <th>支付成功人数</th>
-        <th>支付成功总额</th>
+        <th>支付成功put数量</th>
         <th>支付失败人数</th>
-        <th>支付失败总额</th>
+        <th>支付失败put数量</th>
       </tr>
     </thead>
     <tbody>
       <% @campaigns.each do |campaign|%>
         <tr>
-          <td><%= campaign.name %></td>
+          <td><%= link_to campaign.id, marketing_dashboard_campaign_path(campaign) %></td>
+          <td><%= link_to campaign.name, marketing_dashboard_campaign_path(campaign) %></td>
           <td><%= campaign.kols.count %></td>
           <td><%= campaign.e_wallet_transtions.sum(:amount) %></td>
           <% EWallet::Transtion::STATUS.each do |status| %>
