--- a/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/campaigns/index.html.erb
@@ -45,6 +45,8 @@
   </table>
 </div>
 
+<%= will_paginate @campaigns, renderer: BootstrapPagination::Rails  %>
+
 <div class="modal fade" id="put_create_modal" tabindex="-1" role="dialog" aria-labelledby="put_create_modal_label">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
