--- a/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/transactions/index.html.erb
@@ -55,6 +55,8 @@
   </tbody>
 </table>
 
+<%= will_paginate @transtions, renderer: BootstrapPagination::Rails  %>
+
 <div class="modal fade" id="token_input_modal" tabindex="-1" role="dialog" aria-labelledby="token_input_modal_label">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
