update admin nav

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -454,6 +454,9 @@
               <%= link_to 'PUT币活动奖励列表', marketing_dashboard_e_wallets_campaigns_path %>
             </li>
             <li>
+              <%= link_to 'PUT流水', marketing_dashboard_e_wallets_bills_path %>
+            </li>
+            <li>
               <%= link_to 'PUT币促销设置', sales_marketing_dashboard_e_wallets_redis_sets_path %>
             </li>
           </ul>
