--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -424,6 +424,18 @@
         <% end %>
 
         <li>
+          <a href="#">标签管理<span class="fa arrow"></span></a>
+          <ul class="nav nav-second-level">
+            <li>
+              <%= link_to 'tag管理', marketing_dashboard_tags_path %>
+            </li>
+            <li>
+              <%= link_to 'circle管理', marketing_dashboard_circles_path %>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">"发现"管理<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
