refs: add controller circles

--- a/app/views/marketing_dashboard/tags/index.html.erb
+++ b/app/views/marketing_dashboard/tags/index.html.erb
@@ -27,4 +27,4 @@
   </tbody>
 </table>
 
-<%= will_paginate @kols, renderer: BootstrapPagination::Rails  %>
+<%= will_paginate @tags, renderer: BootstrapPagination::Rails  %>
