--- a/app/views/marketing_dashboard/tags/add_circle.html.erb
+++ b/app/views/marketing_dashboard/tags/add_circle.html.erb
@@ -1,9 +1,14 @@
-
-<div style="margin-left: 20px">
-<p>Add circle</p>
-<%= form_tag marketing_dashboard_tag_add_circle_path do %>
- <label style= "width: 60px">name: </label> <%= text_field_tag :name %><br/>
- <label style= "width: 60px">label:</label> <%= text_field_tag :label %><br/>
-  <%= submit_tag 'submit', :class => 'btn btn-primary' %>
+<% if @circles.present? %>
+  <div style="margin-left: 20px">
+  <p>Add circle</p>
+  <%= form_tag marketing_dashboard_tag_add_circle_path do %>
+    <% @circles.each do |circle| %>
+      <%= check_box_tag 'circle_ids[]', circle.id,  @tag.circles.find_by_id(circle.id)? true : false -%>
+      <%= h circle.name -%>
+    <% end %><br/>
+    <%= submit_tag 'submit', :class => 'btn btn-primary' %>
+  <% end %>
+  </div>
+<% else %>
+  <%= link_to "添加圈子", "#"%>
 <% end %>
-</div>
