--- a/app/views/marketing_dashboard/tags/index.html.erb
+++ b/app/views/marketing_dashboard/tags/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Tag列表</h1>
+<h1>
+  Tag列表
+  <%= link_to "创建新的Tag", new_marketing_dashboard_tag_path, class: "btn btn-primary pull-right" %>
+</h1>
 
 <table class='table table-bordered'>
   <thead>
@@ -20,7 +23,9 @@
         <td><%= t.name %></td>
         <td>
           <%= link_to "+", marketing_dashboard_tag_add_circle_path(t.id), style: "float: right;" %>
-          <%= render partial: "circle", collection: t.circles, locals: {tag_id: t.id} %>
+          <% t.circles.each do |c|%>
+            <%= c.name %><br/>
+          <% end %>
         </td>
       </tr>
     <% end %>
