--- a/app/views/marketing_dashboard/circles/add_tag.html.erb
+++ b/app/views/marketing_dashboard/circles/add_tag.html.erb
@@ -1,15 +1,20 @@
-<% if @tags.present? %>
-  <div style="margin-left: 20px">
-  <p>Add tag</p>
+<div style="margin-left: 20px">
+  <h4><%= "Circle_#{@circle.label}所属标签：" %></h4>
+
   <%= form_tag marketing_dashboard_circle_add_tag_path do %>
-    <% @tags.each do |tag| %>
-      <%= check_box_tag 'tag_ids[]', tag.id,  @circle.tags.find_by_id(tag.id)? true : false -%>
-      <%= h tag.name -%>
-    <% end %><br/>
-    <%= submit_tag 'submit', :class => 'btn btn-primary' %>
+    <div class="label-list clearfix">
+      <% @tags.each do |tag| %>
+        <label class="label-item">
+          <%= check_box_tag 'tag_ids[]', tag.id,  @circle.tags.find_by_id(tag.id)? true : false -%>
+          <%= h tag.label -%>
+        </label>
+      <% end %>
+    </div>
+    
+    <div class="text-left">
+      <%= submit_tag 'submit', :class => 'btn btn-primary' %>
+    </div>
+    
   <% end %>
-  </div>
-<% else %>
-  <%= link_to "添加Tag", "#"%>
-<% end %>
+</div>
 
