--- a/app/views/marketing_dashboard/invite_codes/_form.html.erb
+++ b/app/views/marketing_dashboard/invite_codes/_form.html.erb
@@ -18,7 +18,7 @@
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">邀请码类型</label>
     <div class="col-sm-10">
-      <%= f.select :invite_type ,InviteCode::InviteType.values , :class => "form-control" %>
+      <%= f.select :invite_type, InviteCode::InviteType, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
