--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -436,6 +436,15 @@
         </li>
 
         <li>
+          <a href="#">平台管理<span class="fa arrow"></span></a>
+          <ul class="nav nav-second-level">
+            <li>
+              <%= link_to '平台管理', marketing_dashboard_terraces_path %>
+            </li>
+          </ul>
+        </li>
+
+        <li>
           <a href="#">"发现"管理<span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
             <li>
