update terrace opts

--- a/app/views/marketing_dashboard/terraces/index.html.erb
+++ b/app/views/marketing_dashboard/terraces/index.html.erb
@@ -9,6 +9,7 @@
       <th>平台 ID</th>
       <th>名称</th>
       <th>英文名</th>
+      <th>图标</th>
       <th>操作</th>
     </tr>
   </thead>
@@ -21,9 +22,9 @@
         </td>
         <td><%= t.name %></td>
         <td><%= t.short_name %></td>
+        <td><%= image_tag t.address %></td>
         <td>
           <%= link_to "编辑", edit_marketing_dashboard_terrace_path(t) %>
-          <%= link_to "删除", marketing_dashboard_terrace_path(t), method: :delete, action: "destroy", data: { confirm: '确定要删除吗?' } %>
         </td>
       </tr>
     <% end %>
