--- a/app/views/marketing_dashboard/terraces/_form.html.erb
+++ b/app/views/marketing_dashboard/terraces/_form.html.erb
@@ -16,22 +16,12 @@
   </div>
 
   <div class="form-group">
-    <label for="inputPassword3" class="col-sm-3 control-label">链接地址</label>
+    <label for="inputPassword3" class="col-sm-3 control-label">图标链接地址</label>
     <div class="col-sm-8">
       <%= f.text_field :address, :class => "form-control" %>
     </div>
   </div>
 
-
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-3 control-label">图标</label>
-    <div class="col-sm-8">
-      <%= f.file_field :avatar, :placeholder => '请上传图标', :class => "form-control" %>
-      <% if @terrace.avatar_url.present? %>
-        <%= image_tag @terrace.avatar_url, :width => 100, :height => 100 %>
-      <% end %>
-    </div>
-  </div>
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
