creator and public_wechat_account and weibo_account status to modify

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -149,6 +149,15 @@
             <li>
               <%= link_to t('kol_management.app_kols_rejected'), rejected_marketing_dashboard_kols_path %>
             </li>
+            <li>
+              <%= link_to '内容创作者管理', marketing_dashboard_creators_path %>
+            </li>
+            <li>
+              <%= link_to '微博用户管理', marketing_dashboard_weibo_accounts_path %>
+            </li>
+            <li>
+              <%= link_to '微信公众号用户管理', marketing_dashboard_public_wechat_accounts_path %>
+            </li>
           </ul>
         </li>
         <% end %>
