--- a/app/views/marketing_dashboard/creators/index.html.erb
+++ b/app/views/marketing_dashboard/creators/index.html.erb
@@ -8,6 +8,13 @@
       <th>ID</th>
       <th>kol ID</th>
       <th>审核状态</th>
+      <th>图文报价</th>
+      <th>原创视频报价</th>
+      <th>粉丝数</th>
+      <th>男女比例偏重</th>
+      <th>年龄段偏重</th>
+      <th>作品展示</th>
+      <th>备注</th>
       <th>操作</th>
     </tr>
   </thead>
@@ -16,13 +23,20 @@
     <% @creators.each do |t| %>
       <tr>
         <td><%= link_to t.id, marketing_dashboard_creator_path(t) %></td>
-        <td>
-          <%= t.kol_id %>
-        </td>
+        <td><%= t.kol_id %></td>
         <td><%= Creator::STATUS[t.status] %></td>
+        <td><%= t.price %></td>
+        <td><%= t.video_price %></td>
+        <td><%= t.fans_count %></td>
+        <td><%= Creator::GENDER[t.gender] %></td>
+        <td><%= Creator::AgeRanges[t.age_range] %></td>
+        <td><%= t.content_show %></td>
+        <td><%= t.remark %></td>
         <td>
-          <%= link_to "通过", marketing_dashboard_creator_path(t, status: 'passed'), method: :put  if t.status == 0 %>
-          <%= link_to "拒绝", marketing_dashboard_creator_path(t, status: 'rejected'), method: :put if t.status == 0 %>
+          <% if t.status == 0 %>
+          <%= link_to "通过", marketing_dashboard_creator_path(t, status: 'passed'), method: :put %>
+          <%= link_to "拒绝", marketing_dashboard_creator_path(t, status: 'rejected'), method: :put %>
+          <% end %>
         </td>
       </tr>
     <% end %>
