refs: add paginate

--- a/app/views/marketing_dashboard/weibo_accounts/index.html.erb
+++ b/app/views/marketing_dashboard/weibo_accounts/index.html.erb
@@ -33,7 +33,7 @@
         <td><%= t.fwd_price %></td>
         <td><%= t.price %></td>
         <td><%= t.live_price %></td>
-        <td><%= t.quote_expired_at.to_s(:db) %></td>
+        <td><%= t.quote_expired_at.strftime("%Y%m%d %H:%M:%S") if t.quote_expired_at.present? %></td>
         <td><%= t.circles.map(&:label).join(',') %></td>
         <td><%= t.fans_count %></td>
         <td><%= WeiboAccount::GENDER[t.gender] %></td>
@@ -50,3 +50,5 @@
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate @weibo_account, renderer: BootstrapPagination::Rails  %>
