--- a/app/views/marketing_dashboard/public_wechat_accounts/index.html.erb
+++ b/app/views/marketing_dashboard/public_wechat_accounts/index.html.erb
@@ -8,6 +8,17 @@
       <th>ID</th>
       <th>kol ID</th>
       <th>审核状态</th>
+      <th>单图文报价</th>
+      <th>多图文头条报价</th>
+      <th>次条报价</th>
+      <th>3-n条报价</th>
+      <th>报价有效期至</th>
+      <th>圈子</th>
+      <th>粉丝数</th>
+      <th>男女偏重值</th>
+      <th>粉丝所在城市</th>
+      <th>作品</th>
+      <th>备注</th>
       <th>操作</th>
     </tr>
   </thead>
@@ -20,6 +31,17 @@
           <%= t.kol_id %>
         </td>
         <td><%= PublicWechatAccount::STATUS[t.status] %></td>
+        <td><%= t.price %></td>
+        <td><%= t.mult_price %></td>
+        <td><%= t.sub_price %></td>
+        <td><%= t.n_price %></td>
+        <td><%= t.quote_expired_at.strftime("%Y%m%d %H:%M:%S") if t.quote_expired_at.present? %></td>
+        <td><%= t.circles.map(&:label).join(',') %></td>
+        <td><%= t.fans_count %></td>
+        <td><%= PublicWechatAccount::GENDER[t.gender] %></td>
+        <td><%= t.cities.map(&:name).join(',') %></td>
+        <td><%= t.content_show %></td>
+        <td><%= t.remark %></td>
         <td>
           <%= link_to "通过", marketing_dashboard_public_wechat_account_path(t, status: 'passed'), method: :put  if t.status == 0 %>
           <%= link_to "拒绝", marketing_dashboard_public_wechat_account_path(t, status: 'rejected'), method: :put if t.status == 0 %>
@@ -28,3 +50,5 @@
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate @public_wechat_accounts, renderer: BootstrapPagination::Rails  %>
