update ewallet list

--- a/app/views/marketing_dashboard/tags/index.html.erb
+++ b/app/views/marketing_dashboard/tags/index.html.erb
@@ -1,6 +1,6 @@
 <h1>
   Tag列表
-  <%= link_to "创建新的Tag", new_marketing_dashboard_tag_path, class: "btn btn-primary pull-right" %>
+  <!--<%= link_to "创建新的Tag", new_marketing_dashboard_tag_path, class: "btn btn-primary pull-right" %>-->
 </h1>
 
 <table class='table table-bordered'>
