--- a/app/views/marketing_dashboard/weibo_accounts/index.html.erb
+++ b/app/views/marketing_dashboard/weibo_accounts/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>ID</th>
       <th>kol ID</th>
+      <th>联系方式</th>
       <th>审核状态</th>
       <th>认证类型</th>
       <th>转发价格</th>
@@ -28,6 +29,7 @@
       <tr>
         <td><%= link_to t.id, marketing_dashboard_weibo_account_path(t) %></td>
         <td><%= t.kol_id %></td>
+        <td><%= t.mobile_number %></td>
         <td><%= WeiboAccount::STATUS[t.status] %></td>
         <td><%= WeiboAccount::AuthTypes[t.auth_type] %></td>
         <td><%= t.fwd_price %></td>
