--- a/app/views/marketing_dashboard/e_wallets/bills/index.html.erb
+++ b/app/views/marketing_dashboard/e_wallets/bills/index.html.erb
@@ -26,7 +26,7 @@
       <tr>
         <td class="put-tr-id"><%= tr.id %></td>
         <td><%= link_to tr.kol.name, marketing_dashboard_kol_path(tr.kol), target: "_blank" %></td>
-        <td class="put-remit-token"><%= tr.kol.e_wallet_account.token %></td>
+        <td class="put-remit-token"><%= tr.kol.e_wallet_account.try(:token) %></td>
         <td class="put-remit-amount"><%= tr.amount %></td>
         <td class="put-tx-id"><%= tr.txid %></td>
         <td><%= tr.status %></td>
